# podzone

./: .example.env  .gitignore  .golangci.yml  .mockery.yml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile-ui  Makefile  README.md  buf.gen.yaml  compose-demo.yml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  gqlgen.yml  skaffold.yaml  tools.go
admin-api/: Dockerfile  go.mod  main.go
admin-fe/: angular.json  package-lock.json  package.json
admin-ui/: package.json
agent/: ANGULAR_STYLE_GUIDE.md  SKILL.md  SOLID_STYLE_GUIDE.md
docs/: README.md  STATUS_CURRENT.md  iam-mvp.md  pod-demo-mode.md
frontend/: .prettierrc  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-v2/: README.md  angular.json  federation.config.mjs  package-lock.json  package.json
gateway/: krakend.yaml
nextgen-gateway/: Cargo.toml  README.md  gateway.yaml
nextgen-gateway/server/: ping.py
nextgen-gateway/src/: app.rs  config.rs  main.rs  proxy.rs  registry.rs  state.rs
nextgen-gateway/src/controller/: routes.rs
nextgen-gateway/src/plugins/: auth.rs  circuit_breaker.rs  mod.rs  ratelimit.rs  rewrite.rs
requirements/: 03-domain-map.md  05-epics-and-user-stories.md  07-supplier-mvp.md  08-partner-refactor-plan.md  README.md
scripts/: etcd-backup.db  init-gateway.sh  (+1 more)
web/admin/: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
web/admin/src/: main.rs  routes.rs
web/admin/src/layouts/: header.rs  layout.rs  mod.rs  sidebar.rs
web/admin/src/pages/auth/: auth.rs  google_oauth.rs  login.rs  mod.rs  register.rs
web/admin/src/routes/: mod.rs  root.rs  router.rs
web/admin/src/services/: api.rs
(+2554 files in other folders)
