[package]
name = "nextgen-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
hyper = { version = "1.6.0", features = ["full"] }
tower = "0.5.2"
reqwest = { version = "0.12", features = ["json", "gzip", "stream", "blocking", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
url = "2"
once_cell = "1"
tower-http = "0.4"
