[package]
name = "nextgen-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws", "http1", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
bytes = "1"
tower = "0.5.2"
tower-http = "0.6"
reqwest = { version = "0.12", features = ["json", "gzip", "stream", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
url = "2"
once_cell = "1"
