[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2"
web-sys = { version = "0.3", features = ["Window", "Location"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
gloo-net = "0.6.0"
serde = { version = "1.0.129" }
serde_json = { version = "1.0.140" }
